[package]
edition = "2021"
name = "ppaass-crypto"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ppaass-protocol={git = "https://github.com/quhxuxm/ppaass-protocol.git", branch = "main"}
aes="0.8"
cipher = "0.4"
ecb = "0.1"
thiserror = "1.0"
uuid={version="1.5", features = ["v4"]}
bytes="1.5"
rsa="0.9"
rand="0.8"
